feat: 更新json 4个常用工具

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -10,9 +10,19 @@
     "minify": "Minify",
     "convert": "Convert",
     "download": "Download",
+    "input": "Input",
+    "output": "Output",
+    "upload_file": "Upload File",
+    "remove": "Remove",
+    "copied": "Copied",
+    "downloaded": "Downloaded",
+    "error": "Error",
+    "success": "Success",
+    "copy_failed": "Copy failed",
     "home": "Home",
     "coming_soon": "More tools coming soon...",
-    "click_sidebar": "Use via left sidebar menu"
+    "click_sidebar": "Use via left sidebar menu",
+    "actions": "Actions"
   },
   "theme": {
     "light": "Light",
@@ -123,6 +133,160 @@
         "title": "JSON to YAML Converter Tool",
         "description": "Quickly convert JSON data to YAML format. Supports formatted output and provides convenient configuration file conversion functionality.",
         "keywords": "JSON to YAML,data conversion,JSON processing,YAML format,config conversion,online tool"
+      }
+    },
+    "json-to-xml": {
+      "name": "JSON to XML",
+      "description": "Convert JSON data to XML format",
+      "placeholder": "Please enter JSON data...",
+      "invalid": "Invalid JSON format",
+      "convert_button": "Convert to XML",
+      "input_placeholder": "Please enter JSON data to convert...",
+      "output_placeholder": "Converted XML will be displayed here...",
+      "root_element": "Root Element Name",
+      "errors": {
+        "empty_input": "Please enter JSON data",
+        "invalid_json": "Invalid JSON format"
+      },
+      "success": "Conversion successful",
+      "conversion_complete": "JSON to XML conversion completed",
+      "xml_copied": "XML data copied to clipboard",
+      "xml_downloaded": "XML file downloaded",
+      "meta": {
+        "title": "JSON to XML Converter Tool",
+        "description": "Quickly convert JSON data to XML format. Supports custom root elements, intelligent handling of nested objects and arrays, providing convenient data format conversion functionality.",
+        "keywords": "JSON to XML,data conversion,JSON processing,XML format,data exchange,online tool"
+      }
+    },
+    "json-visualizer": {
+      "name": "JSON Visualizer",
+      "description": "Display JSON data in tree structure",
+      "placeholder": "Please enter JSON data...",
+      "parse_button": "Parse JSON",
+      "input_placeholder": "Please enter JSON data to visualize...",
+      "visualization": "Visualization",
+      "tree_view": "Tree View",
+      "raw_view": "Raw View",
+      "no_data": "No data available, please parse JSON first",
+      "type": "Type",
+      "size": "Size",
+      "depth": "Depth",
+      "errors": {
+        "empty_input": "Please enter JSON data",
+        "invalid_json": "Invalid JSON format"
+      },
+      "success": "Parse successful",
+      "parse_complete": "JSON parsing completed",
+      "json_copied": "JSON data copied to clipboard",
+      "meta": {
+        "title": "JSON Visualizer Tool",
+        "description": "Display JSON data in interactive tree structure. Supports expand/collapse nodes, type identification and statistics, providing intuitive JSON data viewing experience.",
+        "keywords": "JSON visualizer,JSON tree structure,data visualization,JSON viewer,data analysis,online tool"
+      }
+    },
+    "json-generator": {
+      "name": "JSON Data Generator",
+      "description": "Generate mock JSON data for testing",
+      "configuration": "Configuration",
+      "record_count": "Record Count",
+      "output_format": "Output Format",
+      "array_format": "Array Format",
+      "object_format": "Object Format",
+      "fields": "Field Configuration",
+      "add_field": "Add Field",
+      "field_name": "Field Name",
+      "min_value": "Min Value",
+      "max_value": "Max Value",
+      "length": "Length",
+      "field_type": "Field Type",
+      "string_length": "String Length",
+      "array_length": "Array Length",
+      "generate_button": "Generate Data",
+      "output_placeholder": "Generated JSON data will be displayed here...",
+      "generation_complete": "Generated {count} records",
+      "generation_failed": "Data generation failed",
+      "json_copied": "JSON data copied to clipboard",
+      "json_downloaded": "JSON file downloaded",
+      "output_info": "Output size: {size} KB",
+      "success": "Generation successful",
+      "meta": {
+        "title": "JSON Data Generator Tool",
+        "description": "Generate mock JSON data for testing and development. Supports multiple data types, flexible field configuration, batch generation functionality to meet various testing scenario requirements.",
+        "keywords": "JSON generator,mock data,test data,fake data,data generation,development tools,online tool"
+      }
+    },
+    "json-diff": {
+      "name": "JSON Diff Comparison",
+      "description": "Compare differences between two JSON data",
+      "original": "Original Data",
+      "modified": "Modified Data",
+      "left_placeholder": "Please enter original JSON data...",
+      "right_placeholder": "Please enter modified JSON data...",
+      "compare_button": "Compare Differences",
+      "differences": "Differences",
+      "show_unchanged": "Show Unchanged",
+      "hide_unchanged": "Hide Unchanged",
+      "no_differences": "No differences found",
+      "total": "Total",
+      "added": "Added",
+      "removed": "Removed",
+      "modified": "Modified",
+      "unchanged": "Unchanged",
+      "errors": {
+        "empty_input": "Please enter both JSON data",
+        "invalid_json": "Invalid JSON format",
+        "render_failed": "Failed to render differences",
+        "format_failed": "Failed to format differences",
+        "download_failed": "Download failed"
+      },
+      "success": "Comparison successful",
+      "comparison_complete": "Found {count} differences",
+      "report_copied": "Difference report copied to clipboard",
+      "diff_copied": "Difference data copied to clipboard",
+      "diff_downloaded": "Difference file downloaded",
+      "identical_objects": "Both objects are identical",
+      "no_differences_found": "No differences found",
+      "delta_changes": "Delta Changes",
+      "advanced_options": "Advanced Options",
+      "view_mode": "View Mode",
+      "diff_format": "Diff Format",
+      "detect_moves": "Detect Moves",
+      "visual_mode": "Visual Mode",
+      "json_mode": "JSON Mode",
+      "raw_mode": "Raw Mode",
+      "annotated_format": "Annotated Format",
+      "delta_format": "Delta Format",
+      "changes_detected": "{count} changes detected",
+      "using_jsondiffpatch": "Using jsondiffpatch",
+      "comparison_result": "Comparison Result",
+      "side_by_side": "Side by Side",
+      "inline_mode": "Inline Mode",
+      "inline_diff_view": "Inline Diff View",
+      "show_only_differences": "Show Only Differences",
+      "deleted": "Deleted",
+      "added": "Added",
+      "moved": "Moved",
+      "deleted_marked_red": "deleted content marked red",
+      "added_marked_green": "added content marked green",
+      "unified_mode": "Unified Mode",
+      "unified_diff_view": "Unified Diff View",
+      "detect_moves_explanation_title": "Move Detection Feature",
+      "detect_moves_explanation": "When enabled, intelligently identifies array element position changes. When disabled, treats moves as separate delete+add operations",
+      "example": "Example",
+      "with_move_detection": "With move detection",
+      "without_move_detection": "Without move detection",
+      "moved_from_index": "moved from index",
+      "to_index": "to index",
+      "delete_and_add_separately": "Show delete A at index 0 and add A at index 1 separately",
+      "move_detection_enabled": "Move detection enabled",
+      "move_detection_disabled": "Move detection disabled",
+      "recalculated": "Recalculated",
+      "differences_only": "Differences only",
+      "showing_differences_only": "Showing differences only",
+      "meta": {
+        "title": "JSON Diff Comparison Tool",
+        "description": "Deep comparison of differences between two JSON data. Provides detailed difference analysis reports with visual display to help quickly locate data changes.",
+        "keywords": "JSON diff,JSON comparison,data comparison,version comparison,difference analysis,code comparison,online tool"
       }
     }
   }
