--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -10,9 +10,19 @@
     "minify": "संक्षिप्त करें",
     "convert": "परिवर्तित करें",
     "download": "डाउनलोड करें",
+    "input": "इनपुट",
+    "output": "आउटपुट",
+    "upload_file": "फ़ाइल अपलोड करें",
+    "remove": "हटाएं",
+    "copied": "कॉपी हो गया",
+    "downloaded": "डाउनलोड हो गया",
+    "error": "त्रुटि",
+    "success": "सफलता",
+    "copy_failed": "कॉपी असफल",
     "home": "होम",
     "coming_soon": "और भी उपकरण जल्द आ रहे हैं...",
-    "click_sidebar": "बाएं साइडबार मेनू का उपयोग करें"
+    "click_sidebar": "बाएं साइडबार मेनू का उपयोग करें",
+    "actions": "क्रियाएं"
   },
   "theme": {
     "light": "लाइट",
@@ -123,6 +133,160 @@
         "title": "JSON से YAML कनवर्टर टूल",
         "description": "JSON डेटा को तुरंत YAML प्रारूप में परिवर्तित करें। फॉर्मेटेड आउटपुट का समर्थन करता है और सुविधाजनक कॉन्फ़िगरेशन फाइल रूपांतरण कार्यक्षमता प्रदान करता है।",
         "keywords": "JSON से YAML,डेटा रूपांतरण,JSON प्रोसेसिंग,YAML प्रारूप,कॉन्फ़िग रूपांतरण,ऑनलाइन टूल"
+      }
+    },
+    "json-to-xml": {
+      "name": "JSON से XML",
+      "description": "JSON डेटा को XML प्रारूप में परिवर्तित करें",
+      "placeholder": "कृपया JSON डेटा दर्ज करें...",
+      "invalid": "अमान्य JSON प्रारूप",
+      "convert_button": "XML में परिवर्तित करें",
+      "input_placeholder": "कृपया परिवर्तित करने के लिए JSON डेटा दर्ज करें...",
+      "output_placeholder": "परिवर्तित XML यहां प्रदर्शित होगा...",
+      "root_element": "रूट एलिमेंट नाम",
+      "errors": {
+        "empty_input": "कृपया JSON डेटा दर्ज करें",
+        "invalid_json": "अमान्य JSON प्रारूप"
+      },
+      "success": "रूपांतरण सफल",
+      "conversion_complete": "JSON से XML रूपांतरण पूर्ण",
+      "xml_copied": "XML डेटा क्लिपबोर्ड में कॉपी हो गया",
+      "xml_downloaded": "XML फ़ाइल डाउनलोड हो गई",
+      "meta": {
+        "title": "JSON से XML कनवर्टर टूल",
+        "description": "JSON डेटा को तुरंत XML प्रारूप में परिवर्तित करें। कस्टम रूट एलिमेंट्स का समर्थन करता है, नेस्टेड ऑब्जेक्ट्स और एरे को बुद्धिमानी से संभालता है, सुविधाजनक डेटा प्रारूप रूपांतरण कार्यक्षमता प्रदान करता है।",
+        "keywords": "JSON से XML,डेटा रूपांतरण,JSON प्रोसेसिंग,XML प्रारूप,डेटा एक्सचेंज,ऑनलाइन टूल"
+      }
+    },
+    "json-visualizer": {
+      "name": "JSON विज़ुअलाइज़र",
+      "description": "JSON डेटा को ट्री संरचना में प्रदर्शित करें",
+      "placeholder": "कृपया JSON डेटा दर्ज करें...",
+      "parse_button": "JSON पार्स करें",
+      "input_placeholder": "कृपया विज़ुअलाइज़ करने के लिए JSON डेटा दर्ज करें...",
+      "visualization": "विज़ुअलाइज़ेशन",
+      "tree_view": "ट्री व्यू",
+      "raw_view": "रॉ व्यू",
+      "no_data": "कोई डेटा उपलब्ध नहीं, कृपया पहले JSON पार्स करें",
+      "type": "प्रकार",
+      "size": "आकार",
+      "depth": "गहराई",
+      "errors": {
+        "empty_input": "कृपया JSON डेटा दर्ज करें",
+        "invalid_json": "अमान्य JSON प्रारूप"
+      },
+      "success": "पार्स सफल",
+      "parse_complete": "JSON पार्सिंग पूर्ण",
+      "json_copied": "JSON डेटा क्लिपबोर्ड में कॉपी हो गया",
+      "meta": {
+        "title": "JSON विज़ुअलाइज़र टूल",
+        "description": "JSON डेटा को इंटरैक्टिव ट्री संरचना में प्रदर्शित करें। नोड्स को विस्तृत/संक्षिप्त करने, प्रकार पहचान और सांख्यिकीय जानकारी का समर्थन करता है, सहज JSON डेटा देखने का अनुभव प्रदान करता है।",
+        "keywords": "JSON विज़ुअलाइज़र,JSON ट्री संरचना,डेटा विज़ुअलाइज़ेशन,JSON व्यूअर,डेटा विश्लेषण,ऑनलाइन टूल"
+      }
+    },
+    "json-generator": {
+      "name": "JSON डेटा जनरेटर",
+      "description": "परीक्षण के लिए मॉक JSON डेटा जनरेट करें",
+      "configuration": "कॉन्फ़िगरेशन",
+      "record_count": "रिकॉर्ड संख्या",
+      "output_format": "आउटपुट प्रारूप",
+      "array_format": "एरे प्रारूप",
+      "object_format": "ऑब्जेक्ट प्रारूप",
+      "fields": "फील्ड कॉन्फ़िगरेशन",
+      "add_field": "फील्ड जोड़ें",
+      "field_name": "फील्ड नाम",
+      "min_value": "न्यूनतम मान",
+      "max_value": "अधिकतम मान",
+      "length": "लंबाई",
+      "field_type": "फ़ील्ड प्रकार",
+      "string_length": "स्ट्रिंग लंबाई",
+      "array_length": "एरे लंबाई",
+      "generate_button": "डेटा जनरेट करें",
+      "output_placeholder": "जनरेटेड JSON डेटा यहां प्रदर्शित होगा...",
+      "generation_complete": "{count} रिकॉर्ड जनरेट किए गए",
+      "generation_failed": "डेटा जनरेशन असफल",
+      "json_copied": "JSON डेटा क्लिपबोर्ड में कॉपी हो गया",
+      "json_downloaded": "JSON फ़ाइल डाउनलोड हो गई",
+      "output_info": "आउटपुट आकार: {size} KB",
+      "success": "जनरेशन सफल",
+      "meta": {
+        "title": "JSON डेटा जनरेटर टूल",
+        "description": "परीक्षण और विकास के लिए मॉक JSON डेटा जनरेट करें। कई डेटा प्रकारों का समर्थन करता है, लचीला फील्ड कॉन्फ़िगरेशन, बल्क जनरेशन कार्यक्षमता विभिन्न परीक्षण परिदृश्य आवश्यकताओं को पूरा करती है।",
+        "keywords": "JSON जनरेटर,मॉक डेटा,टेस्ट डेटा,फेक डेटा,डेटा जनरेशन,विकास टूल्स,ऑनलाइन टूल"
+      }
+    },
+    "json-diff": {
+      "name": "JSON अंतर तुलना",
+      "description": "दो JSON डेटा के बीच अंतर की तुलना करें",
+      "original": "मूल डेटा",
+      "modified": "संशोधित डेटा",
+      "left_placeholder": "कृपया मूल JSON डेटा दर्ज करें...",
+      "right_placeholder": "कृपया संशोधित JSON डेटा दर्ज करें...",
+      "compare_button": "अंतर तुलना करें",
+      "differences": "अंतर",
+      "show_unchanged": "अपरिवर्तित दिखाएं",
+      "hide_unchanged": "अपरिवर्तित छुपाएं",
+      "no_differences": "कोई अंतर नहीं मिला",
+      "total": "कुल",
+      "added": "जोड़ा गया",
+      "removed": "हटाया गया",
+      "modified": "संशोधित",
+      "unchanged": "अपरिवर्तित",
+      "errors": {
+        "empty_input": "कृपया दोनों JSON डेटा दर्ज करें",
+        "invalid_json": "अमान्य JSON प्रारूप",
+        "render_failed": "अंतर रेंडर करना विफल",
+        "format_failed": "अंतर स्वरूपित करना विफल",
+        "download_failed": "डाउनलोड विफल"
+      },
+      "success": "तुलना सफल",
+      "comparison_complete": "{count} अंतर मिले",
+      "report_copied": "अंतर रिपोर्ट क्लिपबोर्ड में कॉपी हो गई",
+      "diff_copied": "अंतर डेटा क्लिपबोर्ड में कॉपी हो गया",
+      "diff_downloaded": "अंतर फ़ाइल डाउनलोड हो गई",
+      "identical_objects": "दोनों ऑब्जेक्ट बिल्कुल समान हैं",
+      "no_differences_found": "कोई अंतर नहीं मिला",
+      "delta_changes": "डेल्टा परिवर्तन",
+      "advanced_options": "उन्नत विकल्प",
+      "view_mode": "दृश्य मोड",
+      "diff_format": "अंतर स्वरूप",
+      "detect_moves": "मूवमेंट का पता लगाएं",
+      "visual_mode": "विज़ुअल मोड",
+      "json_mode": "JSON मोड",
+      "raw_mode": "रॉ मोड",
+      "annotated_format": "एनोटेटेड स्वरूप",
+      "delta_format": "डेल्टा स्वरूप",
+      "changes_detected": "{count} परिवर्तन का पता चला",
+      "using_jsondiffpatch": "jsondiffpatch का उपयोग",
+      "comparison_result": "तुलना परिणाम",
+      "side_by_side": "साइड बाई साइड",
+      "inline_mode": "इनलाइन मोड",
+      "inline_diff_view": "इनलाइन अंतर दृश्य",
+      "show_only_differences": "केवल अंतर दिखाएं",
+      "deleted": "हटाया गया",
+      "added": "जोड़ा गया",
+      "moved": "स्थानांतरित",
+      "deleted_marked_red": "हटाए गए कोंटेंट को लाल मार्क किया गया",
+      "added_marked_green": "जोड़े गए कोंटेंट को हरा मार्क किया गया",
+      "unified_mode": "यूनिफाईड मोड",
+      "unified_diff_view": "यूनिफाईड डिफ व्यू",
+      "detect_moves_explanation_title": "मूवमेंट डिटेक्शन फीचर",
+      "detect_moves_explanation": "जब सक्षम हो तो अरे ऐलिमेंट पोज़ीशन चेंज को समझदारी से पहचानता है। निष्क्रिय होने पर मूवमेंट को अलग डिलीट+ऐड ऑपरेशन मानता है",
+      "example": "उदाहरण",
+      "with_move_detection": "मूवमेंट डिटेक्शन के साथ",
+      "without_move_detection": "मूवमेंट डिटेक्शन के बिना",
+      "moved_from_index": "इंडेक्स से स्थानांतरित",
+      "to_index": "इंडेक्स में",
+      "delete_and_add_separately": "इंडेक्स 0 में A को हटाना और इंडेक्स 1 में A को जोड़ना अलग-अलग दिखाएं",
+      "move_detection_enabled": "मूवमेंट डिटेक्शन सक्षम",
+      "move_detection_disabled": "मूवमेंट डिटेक्शन निष्क्रिय",
+      "recalculated": "पुनः गणना",
+      "differences_only": "केवल अंतर",
+      "showing_differences_only": "केवल अंतर दिखा रहा है",
+      "meta": {
+        "title": "JSON अंतर तुलना टूल",
+        "description": "दो JSON डेटा के बीच गहरी तुलना करें। विस्तृत अंतर विश्लेषण रिपोर्ट प्रदान करता है, विज़ुअल प्रदर्शन का समर्थन करता है, डेटा परिवर्तनों को तुरंत पहचानने में मदद करता है।",
+        "keywords": "JSON तुलना,JSON अंतर,डेटा तुलना,संस्करण तुलना,अंतर विश्लेषण,कोड तुलना,ऑनलाइन टूल"
       }
     }
   }
