--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -10,9 +10,19 @@
     "minify": "压缩",
     "convert": "转换",
     "download": "下载",
+    "input": "输入",
+    "output": "输出",
+    "upload_file": "上传文件",
+    "remove": "移除",
+    "copied": "已复制",
+    "downloaded": "已下载",
+    "error": "错误",
+    "success": "成功",
+    "copy_failed": "复制失败",
     "home": "首页",
     "coming_soon": "即将推出更多工具...",
-    "click_sidebar": "点击左侧菜单使用"
+    "click_sidebar": "点击左侧菜单使用",
+    "actions": "操作"
   },
   "theme": {
     "light": "亮色模式",
@@ -123,6 +133,160 @@
         "title": "JSON转YAML工具",
         "description": "将JSON数据快速转换为YAML格式。支持格式化输出，提供便捷的配置文件转换功能。",
         "keywords": "JSON转YAML,数据转换,JSON处理,YAML格式,配置转换,在线工具"
+      }
+    },
+    "json-to-xml": {
+      "name": "JSON转XML",
+      "description": "将JSON数据转换为XML格式",
+      "placeholder": "请输入JSON数据...",
+      "invalid": "无效的JSON格式",
+      "convert_button": "转换为XML",
+      "input_placeholder": "请输入要转换的JSON数据...",
+      "output_placeholder": "转换后的XML将显示在这里...",
+      "root_element": "根元素名称",
+      "errors": {
+        "empty_input": "请输入JSON数据",
+        "invalid_json": "输入的JSON格式无效"
+      },
+      "success": "转换成功",
+      "conversion_complete": "JSON转XML转换完成",
+      "xml_copied": "XML数据已复制到剪贴板",
+      "xml_downloaded": "XML文件已下载",
+      "meta": {
+        "title": "JSON转XML工具",
+        "description": "将JSON数据快速转换为XML格式。支持自定义根元素，智能处理嵌套对象和数组，提供便捷的数据格式转换功能。",
+        "keywords": "JSON转XML,数据转换,JSON处理,XML格式,数据交换,在线工具"
+      }
+    },
+    "json-visualizer": {
+      "name": "JSON可视化",
+      "description": "以树形结构展示JSON数据",
+      "placeholder": "请输入JSON数据...",
+      "parse_button": "解析JSON",
+      "input_placeholder": "请输入要可视化的JSON数据...",
+      "visualization": "可视化",
+      "tree_view": "树形视图",
+      "raw_view": "原始视图",
+      "no_data": "暂无数据，请先解析JSON",
+      "type": "类型",
+      "size": "大小",
+      "depth": "深度",
+      "errors": {
+        "empty_input": "请输入JSON数据",
+        "invalid_json": "输入的JSON格式无效"
+      },
+      "success": "解析成功",
+      "parse_complete": "JSON解析完成",
+      "json_copied": "JSON数据已复制到剪贴板",
+      "meta": {
+        "title": "JSON可视化工具",
+        "description": "以交互式树形结构展示JSON数据。支持展开/折叠节点，类型标识和统计信息，提供直观的JSON数据查看体验。",
+        "keywords": "JSON可视化,JSON树形结构,数据可视化,JSON查看器,数据分析,在线工具"
+      }
+    },
+    "json-generator": {
+      "name": "JSON数据生成器",
+      "description": "生成模拟JSON数据用于测试",
+      "configuration": "配置",
+      "record_count": "记录数量",
+      "output_format": "输出格式",
+      "array_format": "数组格式",
+      "object_format": "对象格式",
+      "fields": "字段配置",
+      "add_field": "添加字段",
+      "field_name": "字段名称",
+      "min_value": "最小值",
+      "max_value": "最大值",
+      "length": "长度",
+      "field_type": "字段类型", 
+      "string_length": "字符串长度",
+      "array_length": "数组长度",
+      "generate_button": "生成数据",
+      "output_placeholder": "生成的JSON数据将显示在这里...",
+      "generation_complete": "已生成 {count} 条记录",
+      "generation_failed": "数据生成失败",
+      "json_copied": "JSON数据已复制到剪贴板",
+      "json_downloaded": "JSON文件已下载",
+      "output_info": "输出大小: {size} KB",
+      "success": "生成成功",
+      "meta": {
+        "title": "JSON数据生成器",
+        "description": "生成模拟JSON数据用于测试和开发。支持多种数据类型，灵活的字段配置，批量生成功能，满足各种测试场景需求。",
+        "keywords": "JSON生成器,模拟数据,测试数据,Mock数据,数据生成,开发工具,在线工具"
+      }
+    },
+    "json-diff": {
+      "name": "JSON差异对比",
+      "description": "比较两个JSON数据的差异",
+      "original": "原始数据",
+      "modified": "修改后数据",
+      "left_placeholder": "请输入原始JSON数据...",
+      "right_placeholder": "请输入修改后的JSON数据...",
+      "compare_button": "对比差异",
+      "differences": "差异结果",
+      "show_unchanged": "显示未更改",
+      "hide_unchanged": "隐藏未更改",
+      "no_differences": "没有发现差异",
+      "total": "总计",
+      "added": "新增",
+      "removed": "删除",
+      "modified": "修改",
+      "unchanged": "未更改",
+      "errors": {
+        "empty_input": "请输入两个JSON数据",
+        "invalid_json": "输入的JSON格式无效",
+        "render_failed": "差异渲染失败",
+        "format_failed": "差异格式化失败",
+        "download_failed": "下载失败"
+      },
+      "success": "对比成功",
+      "comparison_complete": "发现 {count} 处差异",
+      "report_copied": "差异报告已复制到剪贴板",
+      "diff_copied": "差异数据已复制到剪贴板",
+      "diff_downloaded": "差异文件已下载",
+      "identical_objects": "两个对象完全相同",
+      "no_differences_found": "未发现任何差异",
+      "delta_changes": "差异详情",
+      "advanced_options": "高级选项",
+      "view_mode": "查看模式",
+      "diff_format": "差异格式",
+      "detect_moves": "检测移动",
+      "visual_mode": "可视化模式",
+      "json_mode": "JSON模式",
+      "raw_mode": "原始模式",
+      "annotated_format": "注释格式",
+      "delta_format": "差异格式",
+      "changes_detected": "检测到 {count} 处变更",
+      "using_jsondiffpatch": "使用 jsondiffpatch",
+      "comparison_result": "对比结果",
+      "side_by_side": "并排对比",
+      "inline_mode": "内联模式", 
+      "inline_diff_view": "内联差异视图",
+      "show_only_differences": "仅显示差异",
+      "deleted": "删除",
+      "added": "新增",
+      "moved": "移动",
+      "deleted_marked_red": "删除内容标红",
+      "added_marked_green": "新增内容标绿",
+      "unified_mode": "统一模式",
+      "unified_diff_view": "统一差异视图",
+      "detect_moves_explanation_title": "移动检测功能说明",
+      "detect_moves_explanation": "开启时能智能识别数组元素的位置变化，关闭时会将移动识别为删除+新增操作",
+      "example": "例子",
+      "with_move_detection": "开启移动检测",
+      "without_move_detection": "关闭移动检测",
+      "moved_from_index": "从索引",
+      "to_index": "移动到索引",
+      "delete_and_add_separately": "分别显示删除索引0的A，新增索引1的A",
+      "move_detection_enabled": "移动检测已开启",
+      "move_detection_disabled": "移动检测已关闭",
+      "recalculated": "重新计算",
+      "differences_only": "仅差异",
+      "showing_differences_only": "仅显示差异部分",
+      "meta": {
+        "title": "JSON差异对比工具",
+        "description": "深度对比两个JSON数据的差异。提供详细的差异分析报告，支持可视化展示，帮助快速定位数据变更。",
+        "keywords": "JSON对比,JSON差异,数据对比,版本对比,差异分析,代码对比,在线工具"
       }
     }
   }
