--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -22,7 +22,8 @@
     "home": "होम",
     "coming_soon": "और भी उपकरण जल्द आ रहे हैं...",
     "click_sidebar": "बाएं साइडबार मेनू का उपयोग करें",
-    "actions": "क्रियाएं"
+    "actions": "क्रियाएं",
+    "back_to_home": "होम पर वापस"
   },
   "theme": {
     "light": "लाइट",
