--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -289,6 +289,44 @@
         "description": "दो JSON डेटा के बीच गहरी तुलना करें। विस्तृत अंतर विश्लेषण रिपोर्ट प्रदान करता है, विज़ुअल प्रदर्शन का समर्थन करता है, डेटा परिवर्तनों को तुरंत पहचानने में मदद करता है।",
         "keywords": "JSON तुलना,JSON अंतर,डेटा तुलना,संस्करण तुलना,अंतर विश्लेषण,कोड तुलना,ऑनलाइन टूल"
       }
+    },
+    "base64-encoder-decoder": {
+      "name": "Base64 एन्कोडर/डीकोडर",
+      "description": "Base64 स्ट्रिंग एन्कोडिंग और डीकोडिंग टूल",
+      "placeholder": "एन्कोड/डीकोड करने के लिए टेक्स्ट दर्ज करें...",
+      "encode": "एन्कोड",
+      "decode": "डीकोड",
+      "input_title": "इनपुट टेक्स्ट",
+      "output_title": "आउटपुट परिणाम",
+      "output_desc": "एन्कोड/डीकोड किया गया टेक्स्ट",
+      "output_placeholder": "एन्कोडिंग/डीकोडिंग परिणाम यहाँ दिखाई देगा...",
+      "invalid_base64": "अमान्य Base64 फॉर्मेट",
+      "encoded": "सफलतापूर्वक एन्कोड किया गया",
+      "decoded": "सफलतापूर्वक डीकोड किया गया",
+      "meta": {
+        "title": "Base64 एन्कोडर/डीकोडर टूल",
+        "description": "ऑनलाइन Base64 एन्कोडिंग और डीकोडिंग टूल। डेटा ट्रांसमिशन, API कॉल और विकास परिदृश्यों के लिए टेक्स्ट को Base64 स्ट्रिंग में/से कनवर्ट करें।",
+        "keywords": "Base64 एन्कोडिंग,Base64 डीकोडिंग,एन्कोडर,डीकोडर,टेक्स्ट रूपांतरण,ऑनलाइन टूल"
+      }
+    },
+    "url-encoder-decoder": {
+      "name": "URL एन्कोडर/डीकोडर",
+      "description": "URL स्ट्रिंग एन्कोडिंग और डीकोडिंग टूल",
+      "placeholder": "एन्कोड/डीकोड करने के लिए URL या टेक्स्ट दर्ज करें...",
+      "encode": "एन्कोड",
+      "decode": "डीकोड", 
+      "input_title": "इनपुट टेक्स्ट/URL",
+      "output_title": "आउटपुट परिणाम",
+      "output_desc": "एन्कोड/डीकोड किया गया URL",
+      "output_placeholder": "एन्कोडिंग/डीकोडिंग परिणाम यहाँ दिखाई देगा...",
+      "invalid_url": "अमान्य URL एन्कोडिंग फॉर्मेट",
+      "encoded": "सफलतापूर्वक एन्कोड किया गया",
+      "decoded": "सफलतापूर्वक डीकोड किया गया",
+      "meta": {
+        "title": "URL एन्कोडर/डीकोडर टूल",
+        "description": "ऑनलाइन URL एन्कोडिंग और डीकोडिंग टूल। फ्रंटएंड विकास के लिए encodeURIComponent फॉर्मेट समर्थन के साथ URL पैरामीटर और विशेष कैरेक्टर एस्केपिंग को संभालें।",
+        "keywords": "URL एन्कोडिंग,URL डीकोडिंग,encodeURIComponent,decodeURIComponent,URL एस्केपिंग,ऑनलाइन टूल"
+      }
     }
   }
 }
